implement qrcode endpoint
